fixed small gallery resizing bug, update coloring on pricing page, spacing of studio and email

--- a/myapp/static/myapp/css/all.css
+++ b/myapp/static/myapp/css/all.css
@@ -15,7 +15,6 @@
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
-  color: #B9A673;
   padding-left: 30px;
   padding-right: 30px;
 }
